Спецификация: децимальный номер сборочного чертежа
извлекается из файла платы. Если д.номер не указан на плате, то для
сборочного чертежа децимальный номер строится на основе номера схемы с
заменой кода документа на СБ.

--- a/gspec/Scripts/python/doc/help.adoc
+++ b/gspec/Scripts/python/doc/help.adoc
@@ -350,6 +350,16 @@ _Документация_.
 Если отмечено, то при формировании спецификации в разделе _Документация_ будет
 указан сборочный чертёж.
 
+====
+
+Если имя файла платы совпадает с именем файла списка цепей (отличаются только
+расширением), то формат страницы и децимальный номер будут изъяты из файла
+платы и помещены в графы _Формат_ и _Обозначение_ соответственно. +
+Если децимальный номер не указан в файле платы, то он будет построен на основе
+децимального номера схемы с заменой кода документа на `СБ`.
+
+====
+
 Схема электрическая принципиальная ::
 Если отмечено, то при формировании спецификации в разделе _Документация_ будет
 указана принципиальная схема.
@@ -399,14 +409,6 @@ _Документация_.
 Плата печатная ::
 Если отмечено, то при формировании спецификации в разделе _Детали_ будет
 указана печатная плата.
-
-====
-
-Если имя файла платы совпадает с именем файла списка цепей (отличаются только
-расширением), то формат страницы и децимальный номер будут изъяты из файла
-платы и помещены в графы _Формат_ и _Обозначение_ соответственно.
-
-====
 
 Стандартные изделия ::
 Если отмечено, то при формировании спецификации будет создан раздел
