Добавлен импорт параметров из другого документа.

--- a/gspec/Scripts/python/doc/help.adoc
+++ b/gspec/Scripts/python/doc/help.adoc
@@ -206,6 +206,9 @@ _Описание_ не является полем компонента. Это
 
 == Параметры
 
+Параметры можно импортировать из другого документа. Для этого нужно нажать
+кнопку `Импорт...` и выбрать документ.
+
 Оптимальный вид документа ::
 Если отмечено, то при открытии документа параметры отображения будут настроены
 для обеспечения наилучшего вида содержимого:
