--- a/manual/Scripts/python/doc/help.adoc
+++ b/manual/Scripts/python/doc/help.adoc
@@ -28,6 +28,9 @@
 
 == Параметры
 
+Параметры можно импортировать из другого документа. Для этого нужно нажать
+кнопку `Импорт...` и выбрать документ.
+
 Оптимальный вид документа ::
 Если отмечено, то при открытии документа параметры отображения будут настроены
 для обеспечения наилучшего вида содержимого:
