Исправлена нумерация первого листа:
- если документ состоит из одного листа, то пустой должна оставаться графа
  "Лист", а не "Листов" как было ранее;
- поля с номером или количеством листов открыты для редактирования на
  всех листах.

--- a/spec/Scripts/python/doc/help.adoc
+++ b/spec/Scripts/python/doc/help.adoc
@@ -12,7 +12,7 @@
 = Спецификация
 :author: Барановский Константин
 :email: baranovskiykonstantin@gmail.com
-:revnumber: 1.3
+:revnumber: 1.4
 
 Справочное руководство
 
@@ -611,7 +611,7 @@ _Перв. примен._
 первого листа с помощью макросов.
 
 Номера и количество страниц подставляются автоматически средствами LibreOffice
-(используются _поля_). Если в документе лишь одна страница, то графа _Листов_,
+(используются _поля_). Если в документе лишь одна страница, то графа _Лист_,
 основной надписи первого листа, остаётся пустой. Это реализовано на основе
 _скрытого абзаца_ с условием.
 
