Принудительный перенос строки:
добавлена возможность разбивать содержимое графы на строки с помощью
комбинации символов "\n". Включить/отключить эту функцию можно с помощью
отдельного параметра.

--- a/bom/Scripts/python/doc/help.adoc
+++ b/bom/Scripts/python/doc/help.adoc
@@ -147,6 +147,18 @@ _Куда входит (обозначение)_.
 находится за пределами конструкции `${}`, а вот фигурные скобки в качестве
 префикса и суффикса нужно экранировать.
 
+[NOTE]
+====
+
+Так как внутри шаблона используется экранирование, то для отображения обратной
+косой черты её тоже нужно экранировать `\\`. Например, чтобы установить перевод
+строки в качестве суффикса нужно указать две обратных косых черты перед
+символом `n`: +
+`${\\n|Посад.место|}` +
+За пределами шаблона обратная косая черта обрабатывается как обычный символ.
+
+====
+
 Шаблон может содержать несколько конструкций вида `${}`.
 
 Если указанное поле пусто или отсутствует, то конструкция `${}` просто
@@ -342,6 +354,10 @@ _Конденсаторы_ и т.д. +
 Если отмечено, то из значения поля _Посад.место_ будет удаляться наименование
 библиотеки включительно с двоеточием, оставляя только наименование посадочного
 места.
+
+Обрабатывать "\n" как переход на новую строку ::
+Если отмечено, то комбинация символов `\n` будет обрабатываться как переход
+на следующую строку таблицы.
 
 
 === Поля
