--- a/index/Scripts/python/doc/help.adoc
+++ b/index/Scripts/python/doc/help.adoc
@@ -12,7 +12,8 @@
 = Перечень элементов
 :author: Барановский Константин
 :email: baranovskiykonstantin@gmail.com
-:revnumber: 1.4
+:revnumber: : \
+include::../../../../version[]
 
 Справочное руководство
 
