Добавлена "Плата печатная" в раздел "Сборочные единицы".

--- a/gspec/Scripts/python/doc/help.adoc
+++ b/gspec/Scripts/python/doc/help.adoc
@@ -423,6 +423,10 @@ _Документация_.
 Если отмечено, то при формировании спецификации будет создан раздел _Сборочные
 единицы_.
 
+Плата печатная ::
+Если отмечено, то при формировании спецификации в разделе _Сборочные единицы_
+будет указана печатная плата.
+
 Детали ::
 Если отмечено, то при формировании спецификации будет создан раздел _Детали_.
 
