--- a/spec/Scripts/python/doc/help.adoc
+++ b/spec/Scripts/python/doc/help.adoc
@@ -170,9 +170,24 @@ _Наименование_ и выступает в виде заголовка 
 
 * *Обозначение*
 * *Значение*
+
+[NOTE]
+====
+
+Если указать _Значение_ с восклицательным знаком в конце `Значение!`, то
+содержимое этого поля будет преобразовано в число. Для резисторов,
+конденсаторов и дросселей (определяется по буквенной части обозначения R,C,L)
+преобразование выполняется с учётом множителя. Для остальных компонентов
+выполняется простая попытка преобразования в вещественное число. Если значение
+не удаётся преобразовать в число, ему присваивается максимально возможное
+значение типа float языка Python (это значение преобразуется в текст как
+`inf`). +
+Основное назначение записи `Значение!` -- сортировка компонентов по величине их
+значения.
+
+====
+
 * *Посад.место*
-* *Документация*
-* *Описание*
 
 [NOTE]
 ====
@@ -185,6 +200,9 @@ _"Посад.место" без наименования библиотеки_, 
 функцию, но применяется ко всем полям _Посад.место_.
 
 ====
+
+* *Документация*
+* *Описание*
 
 [NOTE]
 ====
@@ -444,6 +462,76 @@ _Стандартные изделия_.
 Материалы ::
 Если отмечено, то при формировании спецификации будет создан раздел
 _Материалы_.
+
+
+=== Сортировка
+
+Сортировка групп ::
+Все компоненты разбиваются на группы по полю _Тип_. Порядок групп в
+спецификации настраивается в данном поле. +
+Группы сортируются по первому компоненту (поле или шаблон извлекается из
+первого компонента группы).
+
+[NOTE]
+====
+
+Для сортировки групп доступно специальное наименование в графе _Поле или
+шаблон_ -- `Заголовок группы`. С помощью этого наименования производится
+доступ к
+первой строке заголовка группы (в зависимости от параметров, заголовок может
+состоять из нескольких строк).
+
+====
+
+Сортировка компонентов ::
+Поле содержит параметры сортировки компонентов в группах.
+
+====
+
+Сортировка как групп, так и компонентов выполняется в три этапа (очереди).
+Номер очереди указан в первой колонке `№`. +
+Это значит, что в первую очередь сортировка выполняется по _Полю или шаблону
+1_. Если имеются группы/компоненты, у которых _Поле или шаблон 1_ одинаковы, то
+они будут отсортированы по _Полю или шаблону 2_. Если же группы/компоненты
+имеют одинаковые и _Поле или шаблон 1_, и _Поле или шаблон 2_, то они будут
+отсортированы по _Полю или шаблону 3_.
+
+Порядок компонентов можно установить _По возрастанию_ или _По убыванию_.
+
+Также, порядок сортировки зависит от указанного типа _Содержимого_. Доступны
+три варианта:
+
+Текст ::
+содержимое указанного поля/шаблона компонентов сравнивается посимвольно. +
+Следующие значения: +
+`abc1`, `abc123`, `1`, `abc`, `123`, `abc100`, `123abc`,`1abc`, `100`, `100abc` +
+примут такой порядок (по возрастанию): +
+`1`, `100`, `100abc`, `123`, `123abc`, `1abc`, `abc`, `abc1`, `abc100`, `abc123`
+
+Число ::
+содержимое указанного поля/шаблона компонентов преобразуется в вещественное
+число и, соответственно, сравниваются как числа. Если содержимое поля нельзя
+привести к числу, то такие компоненты помещаются в конец списка без
+сортировки. +
+Следующие значения: +
+`abc1`, `abc123`, `1`, `abc`, `123`, `abc100`, `123abc`,`1abc`, `100`, `100abc` +
+примут такой порядок (по возрастанию): +
+`1`, `100`, `123`, `abc1`, `abc123`, `abc`, `abc100`, `123abc`, `1abc`, `100abc`
+
+Текст+Число ::
+содержимое указанного поля/шаблона компонентов разбивается на текстовые и
+числовые части и затем сравниваются текстовые части как текст, числовые -- как
+числа. При сравнении текстовой и числовой части, числовая имеет больший
+порядок (числа идут перед текстом). +
+Следующие значения: +
+`abc1`, `abc123`, `1`, `abc`, `123`, `abc100`, `123abc`,`1abc`, `100`, `100abc` +
+примут такой порядок (по возрастанию): +
+`1`, `1abc`, `100`, `100abc`, `123`, `123abc`, `abc`, `abc1`, `abc100`, `abc123`
+
+====
+
+Установить значения по умолчанию ::
+Сбросить все настройки сортировки к значениям по умолчанию.
 
 
 === Поля
