--- a/spec/Scripts/python/doc/help.adoc
+++ b/spec/Scripts/python/doc/help.adoc
@@ -152,7 +152,7 @@ _Наименование_ и выступает в виде заголовка 
 косой черты её тоже нужно экранировать `\\`. Например, чтобы установить перевод
 строки в качестве суффикса нужно указать две обратных косых черты перед
 символом `n`: +
-`${\\n|Посад.место|}` +
+`${|Посад.место|\\n}` +
 За пределами шаблона обратная косая черта обрабатывается как обычный символ.
 
 ====
