--- a/gbom/Scripts/python/doc/help.adoc
+++ b/gbom/Scripts/python/doc/help.adoc
@@ -151,7 +151,7 @@ _Поставщик_.
 косой черты её тоже нужно экранировать `\\`. Например, чтобы установить перевод
 строки в качестве суффикса нужно указать две обратных косых черты перед
 символом `n`: +
-`${\\n|Посад.место|}` +
+`${|Посад.место|\\n}` +
 За пределами шаблона обратная косая черта обрабатывается как обычный символ.
 
 ====
