--- a/mexanic/Scripts/python/doc/help.adoc
+++ b/mexanic/Scripts/python/doc/help.adoc
@@ -155,7 +155,7 @@ _Куда входит (обозначение)_.
 косой черты её тоже нужно экранировать `\\`. Например, чтобы установить перевод
 строки в качестве суффикса нужно указать две обратных косых черты перед
 символом `n`: +
-`${\\n|Посад.место|}` +
+`${|Посад.место|\\n}` +
 За пределами шаблона обратная косая черта обрабатывается как обычный символ.
 
 ====
