Добавлено описание команды "Изм." в руководство пользователя.

--- a/gspec/Scripts/python/doc/help.adoc
+++ b/gspec/Scripts/python/doc/help.adoc
@@ -664,6 +664,14 @@ _kicadbom2spec_ будут использованы данные о раздел
 
 ---
 
+Изм. ::
+запустить макрос создания/удаления таблицы изменений текущего листа. +
+Таблица размещается на месте граф _Изм._, _Лист_, _№ докум_, _Подп._, _Дата_
+текущей страницы. +
+Первое нажатие кнопки добавляет таблицу, следующее -- удаляет. +
+Если таблица не пуста будет показано предупреждение. +
+Эти таблицы изменений удаляются при очистке основной надписи.
+
 Лист рег. изм. ::
 запустить макрос создания/удаления листа регистрации изменений. +
 Если лист регистрации изменений отсутствует в документе, то он будет создан в
