--- a/manual/Scripts/python/doc/help.adoc
+++ b/manual/Scripts/python/doc/help.adoc
@@ -97,7 +97,15 @@ _Пояснительная записка_. +
 
 ---
 
-Добавить/удалить лист рег. изм. ::
+Изм. ::
+запустить макрос создания/удаления таблицы изменений текущего листа. +
+Таблица размещается на месте граф _Изм._, _Лист_, _№ докум_, _Подп._, _Дата_
+текущей страницы. +
+Первое нажатие кнопки добавляет таблицу, следующее -- удаляет. +
+Если таблица не пуста будет показано предупреждение. +
+Эти таблицы изменений удаляются при очистке основной надписи.
+
+Лист рег. изм. ::
 запустить макрос создания/удаления листа регистрации изменений. +
 Если лист регистрации изменений отсутствует в документе, то он будет создан в
 виде последней страницы и отделён от содержимого документа разрывом страниц. +
